@@ -1,3 +1,9 @@
+2008-10-31  Andrew Haley  <aph@redhat.com>
+
+	* Makefile.am (install-data-local): Correct symlink paths for
+	SDK-style installed JARs.  
+	Correct symlinks for headers when DESTDIR is set.
+
 2008-10-23  David Edelsohn  <edelsohn@gnu.org>
 
 	PR target/35485
